<resources>
    <string name="app_name">LearnMoto</string>
    <string name="home_text">Home</string>
    <string name="todo_text">To-Do</string>
    <string name="setting_text">Settings</string>
    <string name="welcome">Welcome</string>
    <string name="login">Login</string>
    <string name="new_user">New User?</string>
    <string name="teacher_user_id">Teacher User ID</string>
    <string name="teacher_name">Teacher Name</string>
    <string name="address">Address</string>
    <string name="create_your_account">CREATE YOUR ACCOUNT</string>
    <string name="password">Password</string>
    <string name="assign_level">Assign Level</string>


    <string-array name="Levels">
        <item>Nursery</item>
        <item>Kinder</item>
        <item>Preparatory</item>
    </string-array>
    <string name="title_activity_kinder_filipino_watch">KinderFilipinoWatch</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>


</resources>