<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Student.StudentLogin"
    android:background="@drawable/background"
    android:orientation="vertical">

    <ImageView
        android:layout_marginLeft="10dp"
        android:layout_marginTop="15dp"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:onClick="BacktoMain"
        android:src="@drawable/ic_left_arrow"/>

    <ImageView
        android:layout_width="225dp"
        android:layout_height="225dp"
        android:src="@drawable/logo"
        android:layout_gravity="center"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome"
        android:textSize="40dp"
        android:textColor="@color/white"
        android:layout_gravity="center"/>

    <EditText
        android:id="@+id/my_studID"
        android:layout_width="300dp"
        android:layout_height="45dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/custom_input"
        android:drawableLeft="@drawable/custom_icon_user"
        android:hint="Student ID"
        android:textSize="18dp"
        android:layout_gravity="center"
        android:maxLength="9"
        android:inputType="number"
        android:drawablePadding="10dp"
        android:padding="10dp" />

    <EditText
        android:id="@+id/my_studpass"
        android:layout_width="300dp"
        android:layout_height="45dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/custom_input"
        android:drawableLeft="@drawable/custom_icon_key"
        android:hint="Password"
        android:textSize="18dp"
        android:layout_gravity="center"
        android:drawablePadding="10dp"
        android:inputType="textPassword"
        android:padding="10dp" />

    <LinearLayout
        android:id="@+id/studentHome"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:orientation="horizontal"
        android:background="@drawable/gradient_button"
        android:layout_gravity="center"
        android:layout_marginTop="25dp"
        android:onClick="studentHomeViewLogin">

        <TextView
            android:layout_marginLeft="90dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:textSize="20sp"
            android:textColor="@color/white"
            android:layout_gravity="center"
            />
        <ImageView
            android:layout_marginLeft="60dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:src="@drawable/right_arrow"/>
    </LinearLayout>
    <!--    <Button-->
    <!--        android:id="@+id/btn_login"-->
    <!--        android:layout_width="250dp"-->
    <!--        android:layout_height="45dp"-->
    <!--        android:layout_marginTop="25dp"-->
    <!--        android:layout_gravity="center"-->
    <!--        android:background="@drawable/gradient_button"-->
    <!--        android:drawableEnd="@drawable/right_arrow"-->
    <!--        android:drawablePadding="-50dp"-->
    <!--        android:text="Login"-->
    <!--        android:textColor="#ffff"-->
    <!--        android:textSize="20sp"/>-->

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:layout_marginTop="50dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/new_user"
            android:textColor="@color/white"
            android:textSize="17dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=" Sign up now"
            android:onClick="studentReg"
            android:textColor="@color/green"
            android:textStyle="bold"
            android:textSize="20dp"/>

    </LinearLayout>

</LinearLayout>